# OakDayZInternal

./: .gitignore  CMakeLists.txt  README.md  oak.sln  offsets.txt
docs/: Information.txt
driver/: oak.vcxproj
driver/src/: driver.h  main.cpp  mapper.cpp  memory.cpp  process.cpp  ssdt.cpp
injector/: CMakeLists.txt  injector.cpp  oak_loader.cpp
kdmapper-master/kdmapper-master/kdmapper/: asusgio3_driver.cpp  intel_driver.cpp  kdmapper_asusgio3.cpp  kdmapper_myportio.cpp  myportio_driver.cpp
kdmapper-master/kdmapper-master/kdmapper/include/: asusgio3_driver.hpp  gdrv_driver.hpp  kdmapper.hpp  kdmapper_asusgio3.hpp  kdmapper_myportio.hpp  myportio_driver.hpp
panel-csharp/: App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  OakPanel.csproj  SharedMemory.cs
panel-csharp/Controls/: ColorPickerDialog.xaml  ColorPickerDialog.xaml.cs
panel-csharp/Views/: SettingsView.xaml  SettingsView.xaml.cs  VisualsView.xaml  VisualsView.xaml.cs
scripts/: build_all.ps1  load_driver.ps1  remove_comments.py
src/: main.cpp
src/shaders/: pixel.hlsl  vertex.cso  vertex.hlsl
